--- a/views/home.hbs
+++ b/views/home.hbs
@@ -21,7 +21,8 @@
                                                         <h2 class="user_unregistered-title childsign">
                                                                 Don't have an account?
                                                         </h2>
-                                                        <p class="user_unregistered-text childsign">
+                                                        <p class="user_unregistered-text childsign"
+                                                                style="text-transform: lowercase;">
                                                                 Signup to explore the limitless
                                                                 content of NASA space imagery and data!
                                                         </p>
@@ -35,7 +36,8 @@
                                                         <h2 class="user_registered-title childlog">
                                                                 Have an account?
                                                         </h2>
-                                                        <p class="user_registered-text childlog">
+                                                        <p class="user_registered-text childlog"
+                                                                style="text-transform: lowercase;">
                                                                 Login to access your profile and add share
                                                                 agnificent space photos with your friends.
                                                         </p>
