--- a/views/imagesByName.hbs
+++ b/views/imagesByName.hbs
@@ -1,7 +1,7 @@
 <main>
   <section class="slides">
     <section class="slides-nav"></section>
-    <section id="sec3" class="slide is-active">
+    <section   class="slide is-active" style="background: url(https://images.unsplash.com/photo-1445905595283-21f8ae8a33d2?auto=format&fit=crop&w=1504&q=80);">
       <div class="slide__content">
         <figure class="slide__figure">
           <div class="slide__img" style="
