--- a/views/live.hbs
+++ b/views/live.hbs
@@ -2,7 +2,7 @@
 <main>
   <section class="slides">
     <section class="slides-nav"></section>
-    <section class="slide is-active" id="sec5">
+    <section class="slide is-active" style="background: url(https://images.unsplash.com/photo-1445905595283-21f8ae8a33d2?auto=format&fit=crop&w=1504&q=80);">
       <div class="slide__content">
         <figure class="slide__figure">
           <iframe class="slide__img" src="https://www.youtube.com/embed/21X5lGlDOfg" frameborder="0"
