--- a/views/rovers.hbs
+++ b/views/rovers.hbs
@@ -8,13 +8,14 @@
 
 <main>
   <section class="slides">
-    <section class="slide is-active" id="sec2">
+    <section class="slide is-active"
+      style="background: url(https://images.unsplash.com/photo-1445905595283-21f8ae8a33d2?auto=format&fit=crop&w=1504&q=80);">
 
       <div class="slide__content">
         <figure class="slide__figure">
 
           <div class="slide__img" style="
-              background: url(../images/rover.jpg);
+              background: url(https://i.ytimg.com/vi/n5Qp-UlvxgI/maxresdefault.jpg);
               background-size: cover;
             "></div>
         </figure>
