--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -505,8 +505,8 @@ input {
   animation-delay: 12s;
 }
 
-/* .cb-slideshow li:nth-child(3) {
-  background-image: url(../images/galaxy_bg_03.jpg);
+.cb-slideshow li:nth-child(3) {
+  background-image: url(../images/galaxy_bg_02.jpg);
   -webkit-animation-delay: 24s;
   -moz-animation-delay: 24s;
   -o-animation-delay: 24s;
@@ -515,19 +515,19 @@ input {
 }
 
 .cb-slideshow li:nth-child(4) {
-  background-image: url(../images/galaxy.jpg);
+  background-image: url(../images/galaxy_bg_02.jpg);
   animation-delay: 36s;
 }
 
 .cb-slideshow li:nth-child(5) {
-  background-image: url(../images/letter_bg_02.jpg);
+  background-image: url(../images/galaxy_bg_02.jpg);
   animation-delay: 48s;
 }
 
 .cb-slideshow li:nth-child(6) {
-  background-image: url(../images/letter_bg_03.jpg);
+  background-image: url(../images/galaxy_bg_02.jpg);
   animation-delay: 60s;
-} */
+}
 
 .follow-btn {
   background-color: white;
@@ -552,15 +552,6 @@ input {
   17% {
     opacity: 1;
     transform: scale(1.2);
-  }
-
-  25% {
-    opacity: 0;
-    transform: scale(1.4);
-  }
-
-  100% {
-    opacity: 0;
   }
 }
 
