--- a/views/api.hbs
+++ b/views/api.hbs
@@ -1,7 +1,13 @@
+<style>
+  body {
+    background: url(https://images.unsplash.com/photo-1445905595283-21f8ae8a33d2?auto=format&fit=crop&w=1504&q=80);
+  }
+</style>
 <main>
   <section class="slides">
     <section class="slides-nav"></section>
-    <section class="slide is-active" id="sec1">
+    <section class="slide is-active"
+      style="background: url(https://images.unsplash.com/photo-1445905595283-21f8ae8a33d2?auto=format&fit=crop&w=1504&q=80);">
       <div class="slide__content">
         <figure class="slide__figure">
           <div class="slide__img" style="
@@ -28,7 +34,8 @@
       </div>
     </section>
 
-    <section class="slide" id="sec2">
+    <section class="slide"
+      style="background: url(https://images.unsplash.com/photo-1445905595283-21f8ae8a33d2?auto=format&fit=crop&w=1504&q=80);">
       <div class="slide__content">
         <figure class="slide__figure">
           <div class="slide__img" style="
@@ -56,7 +63,8 @@
       </div>
     </section>
 
-    <section id="sec3" class="slide">
+    <section class="slide"
+      style="background: url(https://images.unsplash.com/photo-1445905595283-21f8ae8a33d2?auto=format&fit=crop&w=1504&q=80);">
       <div class="slide__content">
         <figure class="slide__figure">
           <div class="slide__img" style="
@@ -82,7 +90,8 @@
       </div>
     </section>
 
-    <section class="slide" id="sec4">
+    <section class="slide"
+      style="background: url(https://images.unsplash.com/photo-1445905595283-21f8ae8a33d2?auto=format&fit=crop&w=1504&q=80);">
       <div class="slide__content">
         <figure class="slide__figure">
           <div class="slide__img" style="
@@ -109,7 +118,8 @@
         </header>
       </div>
     </section>
-    <section class="slide" id="sec5">
+    <section class="slide"
+      style="background: url(https://images.unsplash.com/photo-1445905595283-21f8ae8a33d2?auto=format&fit=crop&w=1504&q=80);">
       <div class="slide__content">
         <figure class="slide__figure">
           <div class="slide__img" style="background: url(../images/tv.png); background-size: cover;"></div>
