--- a/views/galleryDetails.hbs
+++ b/views/galleryDetails.hbs
@@ -1,7 +1,7 @@
 <main>
   <section class="slides">
     <section class="slides-nav"></section>
-    <section class="slide is-active" id="sec1">
+    <section class="slide is-active" style="background: url(https://images.unsplash.com/photo-1445905595283-21f8ae8a33d2?auto=format&fit=crop&w=1504&q=80);">
       <div class="slide__content">
         {{#with data}}
         <style>
