--- a/views/profile/profileEdit.hbs
+++ b/views/profile/profileEdit.hbs
@@ -9,7 +9,11 @@
   }
 </style>
 
-<div class="profileCard">
+<div class="profileCard" style="box-shadow: 2px 2px 7px 1px white;
+    background: rgb(128, 128, 128, 0.5);
+}
+
+">
   <div class="col-md-20">
     <div class="container content clear-fix">
       <h2 class="mt-5 mb-5">Profile Settings</h2>
