--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,19 +1,195 @@
-<div>
-  <form action="/profile/search" method="post">
-    <input type="text" name="searchInput">
-    <div>
-      <button type="submit">Search</button>
-    </div>
-  </form>
-</div>
- <h1>Results</h1>
-{{#each users}}
-<div>
-<label for="email">friend's email </label>
-  <p>{{email}}</p>
-  <p>{{username}}</p>
-  <p> <a href="/profile/{{_id}}"> visit profile</a></p>
-</div>
-{{/each}}
-</div>
+<style>
+  .contact-list {
+    display: block;
+    padding: 2px;
+  }
 
+  .contact-list tbody {
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+
+  .contact {
+    border-bottom: 1px solid #f5f5f5;
+    cursor: pointer;
+    position: relative;
+    display: block;
+    -webkit-flex: 1 0 100%;
+    -ms-flex: 1 0 100%;
+    flex: 1 0 100%;
+    opacity: 1;
+    overflow: hidden;
+  }
+
+  .contact-name {
+    color: #515151;
+    cursor: inherit;
+    font-size: 16px;
+    position: relative;
+    z-index: 2;
+  }
+
+  .contact-name .last-name {
+    color: rgb(48, 47, 47);
+    font-weight: bold;
+  }
+
+  body {
+    background: url(.././images/APOD.jpg);
+
+  }
+
+  h2 {
+    color: black;
+  }
+
+  .profileCard {
+    height: 35rem
+  }
+</style>
+
+<div class="profileCard" style="box-shadow: 2px 2px 7px 1px white;
+    background: rgb(128, 128, 128, 0.5);
+}
+
+">
+
+  <div class="container content clear-fix" style="    height: 100%;
+    overflow: scroll;">
+    <h2 class="mt-5 mb-5">Friends in Space</h2>
+    <form action="/profile/search" method="post">
+      <input type="text" name="searchInput">
+      <div>
+        <button type="submit">Search</button>
+      </div>
+    </form>
+    <table id="contactList" class="contact-list">
+      <tbody>
+        {{#each users}}
+        <tr class="contact" style="">
+          <td class="contact-image">
+
+            {{#if imgPath}}
+            <img src="{{imgPath}}" alt="" style="width:50px;height:40px; margin: 2em 0;">
+            {{else}}
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1c/Neil_Armstrong.jpg" alt=""
+              style="width:50px;height:50px; margin: 2em 0;">
+            {{/if}}
+
+          </td>
+          <td class="contact-name">
+
+            <span class="last-name">{{username}}</span>
+            <span class="last-name">{{email}}</span>
+            <span class="last-name"><a href="/profile/{{_id}}"> visit profile</a></span>
+          </td>
+        </tr>
+
+        {{/each}}
+      </tbody>
+    </table>
+
+
+  </div>
+
+</div>
+<div class="navbar">
+  <ul>
+    <li>
+      <a href="/profile/profile">
+        Profile</a>
+    </li>
+    <li>
+      <a href="/api/api">
+        Home</a>
+    </li>
+    <li>
+      <a href="/api/imagesByName">
+        Gallery</a>
+    </li>
+    <li>
+      <a href="/api/rovers">
+        Rovers</a>
+    </li>
+    <li>
+      <a href="/api/picDay">
+        APOD</a>
+    </li>
+    <li>
+      <a href="/api/astroids">
+        Asteroids</a>
+    </li>
+    <li>
+
+  </ul>
+
+</div>
+<style>
+  .navbar li {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    position: relative;
+    display: inline;
+    width: 10%;
+  }
+
+  .navbar li>a {
+    width: 100px;
+    height: 25px;
+    position: relative;
+    display: table;
+    border-collapse: collapse;
+    border-spacing: 0;
+    color: rgb(71, 151, 151);
+    font-family: arial;
+    font-size: 14px;
+    text-decoration: none;
+    transition: all 0.1s linear;
+  }
+
+  .navbar li:hover>a {
+    color: white;
+    background-color: rgb(95, 162, 219, 0.4);
+    transform: scale(1.2);
+    box-shadow: 2px 2px 7px 1px #3b6166;
+  }
+
+  .navbar {
+    left: 22rem;
+    height: 4.5rem;
+    z-index: 1000;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: transparent;
+  }
+
+  /* Style the links inside the navigation bar */
+  .navbar a {
+    /* float: left; */
+    display: inline;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    margin-right: 10px;
+    margin-left: 10px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  /* Add a color to the active/current link */
+  .navbar a.active {
+    background-color: #3b6166;
+    color: white;
+  }
+</style>
