--- a/views/search.hbs
+++ b/views/search.hbs
@@ -62,7 +62,7 @@
     overflow: scroll;">
     <h2 class="mt-5 mb-5">Friends in Space</h2>
     <form action="/profile/search" method="post">
-      <input type="text" name="searchInput">
+      <input type="text" name="searchInput" style="color:white">
       <div>
         <button type="submit">Search</button>
       </div>
